# parakeet-srt

./: .gitignore  error_log.txt  pyproject.toml  test_load.py
src/parakeet_srt/: __init__.py  ai_prompts.py  audio_utils.py  config.py  converter_tab.py  gui.py  job_queue.py  main.py  main_window.py  media_editor.py  queue_panel.py  srt_generator.py  subtitle_formatter.py  transcriber.py  translator.py  worker_signals.py  workers.py  youtube_tab.py  youtube_utils.py
