[project]
name = "parakeet-srt"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyqt6>=6.10.2",
    "yt-dlp>=2026.3.3",
]

[project.scripts]
parakeet-srt = "parakeet_srt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parakeet_srt"]
